--- a/notebooks/embedings_eda.ipynb
+++ b/notebooks/embedings_eda.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-04-20T21:38:20.228950Z",
-     "end_time": "2023-04-20T21:38:22.834364Z"
+     "start_time": "2023-04-30T20:11:10.661053Z",
+     "end_time": "2023-04-30T20:11:11.228776Z"
     }
    },
    "outputs": [],
@@ -26,7 +26,7 @@
    "execution_count": 29,
    "outputs": [],
    "source": [
-    "from src.data.embeding_parser import read_vec_file\n",
+    "from src.data.recbole.embeding_parser import read_vec_file\n",
     "\n",
     "embeddings = read_vec_file('data/raw/MIND_dataset/MINDsmall_dev/entity_embedding.vec')"
    ],
@@ -55,7 +55,7 @@
     }
    ],
    "source": [
-    "from src.data.embeding_parser import match_news_and_embedding\n",
+    "from src.data.recbole.embeding_parser import match_news_and_embedding\n",
     "\n",
     "news_info = pd.read_csv(\n",
     "    filepath_or_buffer='data/raw/MIND_dataset/MINDsmall_dev/news.tsv',\n",
@@ -137,6 +137,122 @@
     "ExecuteTime": {
      "start_time": "2023-04-20T22:04:13.396983Z",
      "end_time": "2023-04-20T22:04:13.447300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Explore number of missed item embeddings"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "mind_small_inter_train = pd.read_csv(\n",
+    "    'data/processed/MIND_dataset/mind_small/mind_small.train.inter',\n",
+    "    sep='\\t', skiprows=[0], names=['user_id', 'item_id', 'label', 'timestamp']\n",
+    ")\n",
+    "\n",
+    "mind_small_inter_dev = pd.read_csv(\n",
+    "    'data/processed/MIND_dataset/mind_small/mind_small.dev.inter',\n",
+    "    sep='\\t', skiprows=[0], names=['user_id', 'item_id', 'label', 'timestamp']\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-30T20:16:21.876857Z",
+     "end_time": "2023-04-30T20:16:24.054780Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train inter\n",
+      "\tNumber of items  20288\n",
+      "dev inter\n",
+      "\tNumber of items  5369\n",
+      "Concatenated inter\n",
+      "\tNumber of items  22771\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "22771"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_items(dataframe):\n",
+    "    number_of_items = len(dataframe['item_id'].unique())\n",
+    "    print('\\tNumber of items ', number_of_items)\n",
+    "    return number_of_items\n",
+    "\n",
+    "print('Train inter')\n",
+    "count_items(mind_small_inter_train)\n",
+    "print('dev inter')\n",
+    "count_items(mind_small_inter_dev)\n",
+    "print('Concatenated inter')\n",
+    "count_items(pd.concat((mind_small_inter_dev, mind_small_inter_train)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-30T20:17:44.594073Z",
+     "end_time": "2023-04-30T20:17:44.884162Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item dataset\n",
+      "\tNumber of items  65238\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "65238"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mind_small_item = pd.read_csv(\n",
+    "    'data/processed/MIND_dataset/mind_small/mind_small.item',\n",
+    "    sep='\\t', skiprows=[0], names=['item_id', 'embedding']\n",
+    ")\n",
+    "\n",
+    "print('Item dataset')\n",
+    "count_items(mind_small_item)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-30T20:18:56.986885Z",
+     "end_time": "2023-04-30T20:18:57.427755Z"
     }
    }
   },
